Extract collections to text files for easier updating in the future